# lidl-to-grocy

./: .gitignore  LICENSE  README.md  products.json  pyproject.toml
src/lidl_to_grocy/: __main__.py  app.py
